# byte-transcoder

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deno.jsonc
examples/: transcode.rs
src/: lib.rs  reader.rs  reader_error.rs
src-ts/: byte-reader.ts  byte-writer.ts  mod.ts  transcode.test.ts
test-cases/: string  u16  u32  u64  uuid
tests/: test_examples.rs  test_reader.rs
